--- a/app/src/main/res/layout/choose_last.xml
+++ b/app/src/main/res/layout/choose_last.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="20dp"
-                android:background="#FFFFFF"
+                android:background="@drawable/bnt_blue"
                 android:text="제출하기"/>
         </LinearLayout>
 </LinearLayout>
