--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -9,10 +9,24 @@
 
 
     <Button
+        android:id="@+id/solved_problems"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/bnt_green"
+        android:text="지난 문제 보러가기"
+        android:textColor="#C3100808"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/problemButton"
+        app:layout_constraintWidth_percent="0.8" />
+
+    <Button
         android:id="@+id/grammerButton"
         android:layout_width="337dp"
         android:layout_height="206dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="84dp"
         android:background="@drawable/border_blue"
         android:fontFamily="sans-serif-medium"
         android:text="문법 보기"
@@ -28,16 +42,16 @@
         android:id="@+id/problemButton"
         android:layout_width="337dp"
         android:layout_height="206dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginTop="84dp"
         android:background="@drawable/border_blue"
         android:text="문제 선택"
         android:textColor="#D5656262"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/grammerButton" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/top"
@@ -81,4 +95,5 @@
             tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
