--- a/app/src/main/res/layout/solved_problem.xml
+++ b/app/src/main/res/layout/solved_problem.xml
@@ -7,10 +7,7 @@
     android:orientation="vertical">
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
