--- a/app/src/main/res/layout/activity_userrevise.xml
+++ b/app/src/main/res/layout/activity_userrevise.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/reg_layout"
+    android:id="@+id/revise_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
